--- a/run-buddy/index.html
+++ b/run-buddy/index.html
@@ -63,18 +63,12 @@
   </div>
 </section>
 
-<!-- "what we do" section -->
-<section>
-  <h2>What We Do</h2>
+<!-- "what you do" section -->
+<section id="what-we-do" class="intro">
+  <h2>What You Do</h2> 
   <p>
     butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
   </p>
-</section>
-
-<!-- "what you do" section -->
-<section>
-  <h2>What You Do</h2> 
-
   <div>
     <!-- insert this img element -->
     <img src="images/step-1.svg" alt="" />
